--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "firebase": "^10.12.5",
     "html2pdf.js": "^0.10.2",
+    "lucide-react": "^0.456.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
