--- a/package.json
+++ b/package.json
@@ -13,22 +13,25 @@
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "firebase": "^10.12.5",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.2",
+    "jspdf": "^2.5.2",
     "lucide-react": "^0.456.0",
+    "n2words": "^1.21.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "uuid": "^11.0.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "globals": "^15.12.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "vite": "^5.2.0"
